Driven values not supported in node groups #56347

Closed
opened 2018-08-13 11:41:08 +02:00 by Chris Cook · 10 comments

System Information
Win 10, Intel Iris Plus Graphics 640 (integrated)

Blender Version
Broken: 2.8 daily builds as of 13/08/2018

Short description of error
Creating a node group of containing driven value crashes blender.

Exact steps for others to reproduce the error

  • Open Default Scene
  • Change 3D view to Shader Editor
  • Enable "Use Nodes"
  • Add "Value" node
  • insert "#frame" into value's input
  • Select "Value" node
  • Select Node> Make Group
**System Information** Win 10, Intel Iris Plus Graphics 640 (integrated) **Blender Version** Broken: 2.8 daily builds as of 13/08/2018 **Short description of error** Creating a node group of containing driven value crashes blender. **Exact steps for others to reproduce the error** - Open Default Scene - Change 3D view to Shader Editor - Enable "Use Nodes" - Add "Value" node - insert "#frame" into value's input - Select "Value" node - Select Node> Make Group
Author

Added subscriber: @smilebags

Added subscriber: @smilebags

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

I have reviewed both links you have mentioned, and I believe I have provided sufficient information as per the template and guidelines. All required information is present, the steps are clear and concise, and I cannot produce a file in the final state, due to the crash occurring.

What information is missing from the above report?

I have reviewed both links you have mentioned, and I believe I have provided sufficient information as per the template and guidelines. All required information is present, the steps are clear and concise, and I cannot produce a file in the final state, due to the crash occurring. What information is missing from the above report?

Added subscriber: @jenkm

Added subscriber: @jenkm

@smilebags Create a file until the last step, this file will save time.

@mont29 Update guidelines, explain why you need (always) the file, even if it's a default scene, etc.

@smilebags Create a file until the last step, this file will save time. @mont29 Update guidelines, explain why you need (always) the file, even if it's a default scene, etc.
Author

drivenValueBug.blend
Here is the file just before doing the last step

[drivenValueBug.blend](https://archive.blender.org/developer/F4221668/drivenValueBug.blend) Here is the file just before doing the last step
Bastien Montagne self-assigned this 2018-08-23 14:54:45 +02:00

@jenkm am beyond being tired to repeat the same over and over and over, this has already been explained gazillions of times.

@smilebags thanks, confirmed.

@jenkm am beyond being tired to repeat the same over and over and over, this has already been explained gazillions of times. @smilebags thanks, confirmed.

This issue was referenced by a9ecfc9653

This issue was referenced by a9ecfc965349241b858b1b23d0a3d9b987600b5d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56347
No description provided.