Fix T56347: Driven values not supported in node groups.

Need to rebuild dependency graph when we add or remove nodes from a tree...